--- a/taller.ipynb
+++ b/taller.ipynb
@@ -1106,9 +1106,9 @@
     }
    ],
    "source": [
-    "y_pred = estimator.predict(X_train)\n",
+    "y_pred_1 = estimator.predict(X_train)\n",
     "\n",
-    "accuracy_train = accuracy_score(y_train, y_pred)\n",
+    "accuracy_train = accuracy_score(y_train, y_pred_1)\n",
     "accuracy_train"
    ]
   },
@@ -1129,9 +1129,9 @@
     }
    ],
    "source": [
-    "y_pred = estimator.predict(X_test)\n",
+    "y_pred_2 = estimator.predict(X_test)\n",
     "predict_proba = estimator.predict_proba(X_test)\n",
-    "accuracy_test = accuracy_score(y_test, y_pred)\n",
+    "accuracy_test = accuracy_score(y_test, y_pred_2)\n",
     "accuracy_test"
    ]
   },
@@ -1170,7 +1170,7 @@
     }
    ],
    "source": [
-    "confusion_matrix(y_test, y_pred)"
+    "confusion_matrix(y_test, y_pred_1)"
    ]
   },
   {
@@ -1203,7 +1203,7 @@
     }
    ],
    "source": [
-    "print(classification_report(y_test,y_pred))"
+    "print(classification_report(y_test,y_pred_2))"
    ]
   },
   {
@@ -1242,7 +1242,7 @@
    "source": [
     "disp = ConfusionMatrixDisplay.from_predictions(\n",
     "    y_test,\n",
-    "    y_pred,\n",
+    "    y_pred_2,\n",
     "    cmap=\"Greens\",\n",
     ")\n",
     "disp.figure_.suptitle(\"Confusion Matrix\")\n",
@@ -1319,7 +1319,7 @@
     "    plt.subplot(num_rows, 2 * num_cols, 2 * i + 1)\n",
     "    plot_image(\n",
     "        i,\n",
-    "        y_pred,\n",
+    "        y_pred_1,\n",
     "        y_test,\n",
     "        predict_proba,\n",
     "        X_test.reshape(len(X_test), 8, 8),\n",
@@ -1328,7 +1328,7 @@
     "    plot_value_array(\n",
     "        i,\n",
     "        predict_proba,\n",
-    "        y_pred,\n",
+    "        y_pred_1,\n",
     "        y_test,\n",
     "    )\n",
     "plt.tight_layout()\n",
